--- a/jedis-client/src/main/resources/application.yml
+++ b/jedis-client/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     # Redis服务器连接端口
     port: ${REDIS_PORT:6379}
     # Redis服务器连接密码（默认为空）
-    password: ${REDIS_PASSWORD:egovaredis}
+    password: ${REDIS_PASSWORD:}
     # 链接超时时间（单位:ms）
     timeout: ${REDIS_TIMEOUT:3000}
     # Redis数据库索引（默认为0）
